2005-03-25  Jamey Sharp  <jamey@minilop.net>

	* src/xcb.h, src/xcb_in.c:
	Remove XCBEventQueueLength and XCBEventQueueClear: they're not
	part of the new API, and they interfere with analysis of the
	_xcb_list implementation.

2005-03-24  Josh Triplett  <josh@freedesktop.org>

	* configure.ac:
	Change pdx.freedesktop.org to lists.freedesktop.org in package
	email address.

2005-03-23  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_conn.c, src/xcb_in.c:
	avn@daemon.hole.ru pointed out two memory leaks in XCB, which
	this update fixes. I also introduced a third a couple of days
	ago, which this fixes as well.

2005-03-23  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_in.c:
	Quit storing an "error" flag: it's redundant with the contents
	of the packet that it was stored with.

2005-03-22  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_in.c, src/xcbint.h:
	My recent Xlib patch stressed XCB's pending reply queue in ways
	it has never been stressed before, with thousands of entries.
	Profiling revealed that wake_up_next_reader was taking most of
	the cycles of my test app with its linear search of the reply
	queue. So I gave it its own 'readers' queue, which can have at
	most one entry per thread, and which can be no more than the
	number of pending replies. In the current implementation the
	readers queue uses only constant-time operations, too.

2005-03-20  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_in.c:
	Wait for the last known read sequence number to pass the request
	we're waiting for, instead of checking whether data has arrived
	for the current request. Causes null to be returned if somebody
	screwed up by expecting a reply when none can come; relied on by
	new Xlib/XCB bits that intentionally and routinely screw up this
	way because the API doesn't give them enough information.

	* src/xcb_list.c, src/xcbint.h:
	Add _xcb_list_peek_head so Xlib doesn't have to repeatedly
	remove and re-insert the item at the head of its new